# batchflow

./: CLAUDE.md  SConstruct  pyproject.toml
batchflow/: __init__.py  agent.py  bus.py  classifier.py  cli.py  graph.py  loader.py  monitor.py  runner.py  state.py  workspace.py
batchflow/backends/: __init__.py  bps.py  postgres.py
bin.src/: batchflow
docs/: design.md
examples/: b_protocol.yaml  b_protocol_dag.yaml
examples/eo_pipe_adapter/: __init__.py  adapter.py  cli.py
tests/: test_batchflow.py
